frontend/js/syntax_error.txt
d:\Mini project\deliciae\frontend\js\script.js:767
}
^

SyntaxError: Missing catch or finally after try
    at wrapSafe (node:internal/modules/cjs/loader:1486:18)
    at checkSyntax (node:internal/main/check_syntax:78:3)

Node.js v22.14.0
